# rust-suricata-extra

./: Cargo.toml  README.md
suricata-client/: Cargo.toml  LICENSE-MIT  README.md
suricata-client/examples/: iface-list.rs
suricata-client/src/: lib.rs
suricatasc/: Cargo.toml
suricatasc/src/: commands.rs  main.rs  rustyprompt.rs
